# oci-desktop-unofficial

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: build-windows.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  compute.rs  config.rs  database.rs  iam.rs  mod.rs  network.rs  profile.rs  storage.rs
src-tauri/src/models/: compute.rs  database.rs  iam.rs  mod.rs  network.rs  profile.rs  storage.rs
src-tauri/src/oci/: client.rs  config_parser.rs  mod.rs  regions.rs  signature.rs
src/components/: ResourcePage.css
src/components/common/: FilePickerButton.css  FilePickerButton.tsx  Notification.css  Notification.tsx
src/components/compute/: ComputePage.tsx
src/components/dashboard/: DashboardPage.tsx
src/components/database/: DatabasePage.tsx
src/components/iam/: IamPage.tsx
src/components/layout/: AppShell.css  AppShell.tsx  Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
src/components/network/: NetworkPage.tsx
src/components/settings/: ProfileEditor.css  ProfileEditor.tsx  ProfileList.css  ProfileList.tsx  RegionSelector.css  RegionSelector.tsx  SettingsPage.css  SettingsPage.tsx
src/context/: ProfileContext.tsx  ZoomContext.tsx
src/services/: auth.service.ts  compute.service.ts  config.service.ts  database.service.ts  iam.service.ts  network.service.ts  profile.service.ts  storage.service.ts
src/types/: profile.ts
(+1 files in other folders)
