[package]
name = "oci-desktop-unofficial"
version = "0.1.0"
description = "OCI リソース管理デスクトップアプリケーション"
authors = ["engchina"]
edition = "2021"

[lib]
name = "oci_desktop_unofficial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
anyhow = "1.0"
thiserror = "2"
log = "0.4"
dirs = "6"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
